F&GDEV/src/objects/Approval_State__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Date_Time__c</fullName>
        <label>Approval Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Policy_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Policy Form</label>
        <referenceTo>Policy_Form_Detail__c</referenceTo>
        <relationshipName>Approval_States</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Situs_State__c</fullName>
        <label>Situs_State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Approved Situs State</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Approval State Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approved Situs States</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>